# NSS-Result-Tracker

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
config/: detection.toml
docs/: capture_verification.md  git_workflow.md  screen_states.md
fixtures/videos/: metadata.json
models/: NOTICE.md
scripts/: capture_stream_test.py  capture_test_frame.py  inspect_banner_colors.py  inspect_gauge_fill.py  inspect_goal_colors.py  inspect_match_state_timeline.py  inspect_rank_gauge_timeline.py  inspect_rank_ocr.py  inspect_video_timeline.py  inspect_vs_hue_timeline.py  list_dshow_devices.py  run_web_dashboard.py  web_server_poc.py
src/: image_processor.py
src/nss_tracker/: config.py  detection_config.py  obs_control.py  timeutil.py
src/nss_tracker/capture/: ffmpeg_capture.py
src/nss_tracker/database/: db.py
src/nss_tracker/detection/: banner.py  goal.py  league_change.py  match_end.py  matchmaking.py  motion.py  rank_ocr.py  vs_rank.py
src/nss_tracker/state/: match_state.py
src/nss_tracker/web/: runner.py  server.py
src/nss_tracker/web/static/: overlay-refresh.js  overlay.css  rank_delta_distribution.css  (+2 more)
tests/: conftest.py  test_banner.py  test_banner_video_regression.py  test_config.py  test_database.py  test_detection_config.py  test_environment.py  test_ffmpeg_capture.py  test_goal.py  test_league_change.py  test_main.py  test_match_end.py  test_match_state.py  test_matchmaking.py  test_matchmaking_video_regression.py  test_motion.py  test_obs_control.py  test_rank_ocr.py  test_timeutil.py  test_vs_rank.py  test_web_server.py
(+7 files in other folders)
