[project]
name = "nss-result-tracker"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "easyocr>=1.7.2",
    "imageio-ffmpeg>=0.6.0",
    "opencv-python>=5.0.0.93",
    "paddleocr>=2.10.0",
    "paddlepaddle>=3.3.1",
    "python-dotenv>=1.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nss_tracker"]

[tool.pytest.ini_options]
addopts = "-m 'not slow'"
markers = [
    "slow: 重い処理(OCR等)のテスト。デフォルトのpytest実行では回さない",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
